--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -1,15 +1,18 @@
 [General]
+geoip-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 # IPv6 支持
 ipv6 = false
 # > 跳过某个域名或者IP段
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,localhost,*.local,passenger.t3go.cn,passenger.t3go.cn
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 # DNS 服务器
-dns-server = system,119.29.29.29,223.5.5.5
-doh-server = https://dns.alidns.com/dns-query,https://south.lele233.pro/cdn,https://east.lele233.pro/dns-query
+dns-server = 119.29.29.29,223.5.5.5
+doh3-server = https://dns.alidns.com/dns-query
+doq-server = quic://south.ovo.glass,quic://east.ovo.glass
+doh-server = https://south.lele233.pro/cdn,https://east.lele233.pro/dns-query
 # Wi-Fi 访问
 allow-udp-proxy = false
-allow-wifi-access = true
+allow-wifi-access = false
 wifi-access-http-port = 7890
 wifi-access-socks5-port = 7890
 # > real-ip指定的域名将不返回fake ip响应，直接将dns请求发往目标dns服务器
@@ -31,18 +34,21 @@ force-http-engine-hosts = aliyun.example.com:0
 
 # >机场订阅
 [Remote Proxy]
-iQZone = https://gist.githubusercontent.com/yishangfei,udp=false,fast-open=false,vmess-aead=true,enabled=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Telecom.png
+iQZone = https://gist.githubusercontent.com/yishangfei/,udp=false,fast-open=false,vmess-aead=true,enabled=true,img-url=https://raw.iqiq.io/Orz-3/mini/master/Alpha/Flower.png
+网易云音乐=https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Netease.list,udp=false,fast-open=false,vmess-aead=true,enabled=true,img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Netease.png
 
 # >策略组
 [Proxy Group]
-自动选择 = url-test,iQZone,url = http://www.gstatic.com/generate_204,interval = 600,tolerance = 50,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
-节点选择 = select,自动选择,新加坡,香港,其他,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Daily.png
-Global = select,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
-Telegram = select,节点选择,新加坡,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
-Apple = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+自动选择 = url-test,iQZone,url = http://www.gstatic.com/generate_204,interval = 600,tolerance = 50,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Auto.png
+节点选择 = select,自动选择,新加坡,香港,其他,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Static.png
+Global = select,节点选择,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Global.png
+Telegram = select,节点选择,新加坡,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Telegram.png
+Apple = select,DIRECT,节点选择,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Apple.png
 Emby = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
-PayPal = select,节点选择,美国,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
-漏网之鱼 = select,节点选择,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
+Speedtest = select, direct, 节点选择, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Speedtest.png
+PayPal = select,节点选择,美国,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Paypal.png
+Netease_Music=select, direct, 网易,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Netease.png
+漏网之鱼 = select,节点选择,DIRECT,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Final.png
 
 # >筛选订阅节点
 [Remote Filter]
@@ -51,6 +57,7 @@ PayPal = select,节点选择,美国,img-url = https://raw.githubusercontent.com/
 日本 = NameRegex,iQZone, FilterKey = "日本|JP"
 美国 = NameRegex,iQZone, FilterKey = "美国|US"
 新加坡 = NameRegex,iQZone, FilterKey = "新加坡|Singapore"
+网易云 = NameRegex,网易云音乐, FilterKey = "网易云"
 其他 = NameRegex,iQZone, FilterKey = "泰国|越南|印度"
 
 # >本地分流规则
@@ -66,12 +73,9 @@ https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Chin
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaIPs/ChinaIPs.list, policy=DIRECT, tag=🎯 中国IP, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=💬 微信, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Speedtest/Speedtest.list, policy=DIRECT, tag=🌐 Speedtest, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/NetEaseMusic/NetEaseMusic.list, policy=DIRECT, tag=🎵 网易云音乐, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Spotify/Spotify.list, policy=Global, tag=🎵 Spotify, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=🍎 Apple, enabled=false
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/AppStore.list, policy=Apple, tag=AppStore.list, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/AppleID.list, policy=DIRECT, tag=AppleID.list, enabled=true
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/iCloud/iCloud.list, policy=Apple, tag=iCloud.list, enabled=true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/ApplePushNotificationService.list, policy=DIRECT, tag=ApplePushNotificationService.list, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Telegram.list, policy=Telegram, tag=📟 Telegram, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/PayPal/PayPal.list, policy=PayPal, tag=💰 PayPal, enabled=true
 https://raw.githubusercontent.com/yishangfei/run/main/Loon/Filter/Emby.list, policy=Emby, tag=📺 Emby, enabled=true
@@ -89,8 +93,6 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon
 
 # >本地脚本
 [Script]
-# 阿里云盘挂载
-http-request ^http:\/\/aliyun\.example\.com script-path=https://raw.githubusercontent.com/githubdulong/Script/master/ali.js, requires-body=true, timeout=10, tag=阿里云盘挂载, img-url=https://raw.githubusercontent.com/Softlyx/Fileball/main/YUAN/ALiYun.png
 
 # >远程脚本订阅
 [Remote Script]
@@ -98,10 +100,9 @@ http-request ^http:\/\/aliyun\.example\.com script-path=https://raw.githubuserco
 
 # >插件(类似Surge的模块)
 [Plugin]
+https://raw.githubusercontent.com/VirgilClyne/Cloudflare/main/plugin/Cloudflare.1.1.1.1.plugin, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/plugin/DNS.plugin, tag=🌐DNS, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/plugin/General.plugin, tag=🌐General Settings Enhanced, enabled=true
-https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/Location.plugin, tag=📍定位服务, enabled=true
-https://raw.githubusercontent.com/VirgilClyne/iRingo/main/plugin/Siri.plugin, tag=🔍Siri与搜索, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Loon-Gallery/master/loon-gallery.plugin, tag=🎈Gallery, enabled=true
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, tag=BoxJS, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/Loon.plugin, tag=Sub-Store订阅, enabled=true
@@ -115,6 +116,7 @@ https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Bilibili_remove
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Weibo_remove_ads.plugin, enabled=true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/RedPaper_remove_ads.plugin, enabled=true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/YouTube_remove_ads.plugin, enabled=true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/WexinMiniPrograms_Remove_ads.plugin, tag=微信小程序去广告, enabled=true
 https://gitlab.com/lodepuly/vpn_tool/raw/main/Tool/Loon/Plugin/Weixin_external_links_unlock.plugin, enabled=true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Cainiao_remove_ads.plugin, enabled=true
 https://raw.githubusercontent.com/deezertidal/private/master/plugallery/aptv.plugin, tag=APTV, enabled=false
