--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -45,9 +45,9 @@ Global = select,节点选择,img-url = https://raw.iqiq.io/Orz-3/mini/master/Col
 Telegram = select,节点选择,新加坡,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Telegram.png
 Apple = select,DIRECT,节点选择,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Apple.png
 Emby = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
-Speedtest = select, direct, 节点选择, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Speedtest.png
+Speedtest = select, DIRECT, 节点选择, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Speedtest.png
 PayPal = select,节点选择,美国,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Paypal.png
-Netease_Music=select, direct, 网易,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Netease.png
+Netease_Music=select, DIRECT, 网易,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Netease.png
 漏网之鱼 = select,节点选择,DIRECT,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Final.png
 
 # >筛选订阅节点
