--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -48,7 +48,7 @@ Emby = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Ko
 Speedtest = select, DIRECT, 节点选择, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Speedtest.png
 PayPal = select,节点选择,美国,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Paypal.png
 Netease_Music=select, DIRECT, 网易云,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Netease.png
-漏网之鱼 = select,节点选择,DIRECT,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Final.png
+漏网之鱼 = select,DIRECT,节点选择,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Final.png
 
 # >筛选订阅节点
 [Remote Filter]
