--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -47,7 +47,7 @@ Apple = select,DIRECT,节点选择,img-url = https://raw.iqiq.io/Orz-3/mini/mast
 Emby = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
 Speedtest = select, DIRECT, 节点选择, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Speedtest.png
 PayPal = select,节点选择,美国,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Paypal.png
-Netease_Music=select, DIRECT, 网易云,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Netease.png
+NetEaseMusic = select, DIRECT, 网易云,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Netease.png
 漏网之鱼 = select,DIRECT,节点选择,img-url = https://raw.iqiq.io/Orz-3/mini/master/Color/Final.png
 
 # >筛选订阅节点
@@ -73,7 +73,7 @@ https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Chin
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaIPs/ChinaIPs.list, policy=DIRECT, tag=🎯 中国IP, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=💬 微信, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Speedtest/Speedtest.list, policy=DIRECT, tag=🌐 Speedtest, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/NetEaseMusic/NetEaseMusic.list, policy=DIRECT, tag=🎵 网易云音乐, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/NetEaseMusic/NetEaseMusic.list, policy=NetEaseMusic, tag=🎵 网易云音乐, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Spotify/Spotify.list, policy=Global, tag=🎵 Spotify, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=🍎 Apple, enabled=false
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Telegram.list, policy=Telegram, tag=📟 Telegram, enabled=true
