--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -46,7 +46,7 @@ static=Apple, direct, 节点选择, 美国节点, img-url=https://raw.iqiq.io/Or
 static=Emby, direct, 节点选择, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Emby.png
 static=Speedtest, direct, 节点选择, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Speedtest.png
 static=PayPal, 节点选择, 美国节点, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Paypal.png
-static=Netease_Music, direct, server-tag-regex=网易,img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Netease.png
+static=NetEaseMusic, direct, server-tag-regex=网易,img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Netease.png
 static=漏网之鱼, 节点选择, direct, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/Final.png
 
 url-latency-benchmark=台湾节点, server-tag-regex=台|TW, check-interval=900, tolerance=0, img-url=https://raw.iqiq.io/Orz-3/mini/master/Color/TW.png
@@ -61,7 +61,7 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Filter
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list, tag=💬WeChat-直连, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Speedtest/Speedtest.list, tag=🌐Speedtest-直连, force-policy=Speedtest, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, tag=🍎 Apple, update-interval=172800, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/NetEaseMusic/NetEaseMusic.list, tag=🎵 网易云音乐, force-policy=Netease_Music, update-interval=172800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/NetEaseMusic/NetEaseMusic.list, tag=🎵 网易云音乐, force-policy=NetEaseMusic, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Telegram/Telegram.list, tag=📟 Telegram, force-policy=Telegram, update-interval=172800, opt-parser=false , enabled=true
 https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Emby.list, tag=📺Emby, force-policy=Emby, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/PayPal/PayPal.list, tag=💰 PayPal, force-policy=PayPal, update-interval=172800, opt-parser=false, enabled=true
