--- a/Shadowrocket_diy.conf
+++ b/Shadowrocket_diy.conf
@@ -1,43 +1,27 @@
-# Shadowrocket: 2023-03-09 13:00:36
 # > GeoIP数据库
 #https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 
 [General]
-# 旁路系统。如果禁用此选项，可能会导致一些系统问题，如推送通知延迟。
+[General]
 bypass-system = true
-# 跳过代理。此选项强制这些域名或IP的连接范围由Shadowrocket TUN接口来处理，而不是Shadowrocket代理服务器。此选项用于解决一些应用程序的一些兼容性问题。
-skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com,*.ccb.com,*.abchina.com.cn,*.psbc.com
-# TUN旁路路由。Shadowrocket TUN接口只能处理TCP协议。使用此选项可以绕过指定的IP范围，让其他协议通过。
+skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
-# DNS覆写。使用普通DNS或加密DNS（如doh、doq、dot等）覆盖默认的系统DNS。有些dns over https支持http3，所以尝试查询，如果支持就切换到http3。可在doh链接后面加上#no-h3关闭。
-dns-server = https://doh.pub/dns-query,https://dns.alidns.com/dns-query,223.5.5.5,119.29.29.29
-# 备用DNS。当覆写的DNS解析失败后回退备用DNS，如需指定多个DNS，可用逗号分隔。system表示回退到系统DNS。
+dns-server = https://dns.alidns.com/dns-query,https://south.lele233.pro/dns-query,https://east.lele233.pro/dns-query,system
 fallback-dns-server = system
-# 启用IPv6支持。false表示不启用，true表示启用。
 ipv6 = false
-# 首选IPv6。优先向IPv6的DNS服务器查询AAAA记录，优先使用AAAA记录。false表示不启用。
 prefer-ipv6 = false
-# 域名直接使用系统DNS进行解析。false表示不启用。
+dns-fallback-system = false
 dns-direct-system = false
-# ping数据包自动回复。
 icmp-auto-reply = true
-# 不开启时，REJECT策略默认只有在配置模式下生效。开启后，可以令该策略在其他全局路由模式下都生效。
 always-reject-url-rewrite = false
-# 私有IP应答。如果不启用该选项，域名解析返回私有IP，Shadowrocket会认为该域名被劫持而强制使用代理。
-private-ip-answer = true
-# 直连域名解析失败后使用代理。false表示不启用。
-dns-direct-fallback-proxy = false
-# 当UDP流量匹配到规则里不支持UDP转发的节点策略时重新选择回退行为，可选行为包括DIRECT、REJECT。DIRECT表示直连转发UDP流量，REJECT表示拒绝转发UDP流量。
-udp-policy-not-supported-behaviour = REJECT
-# DNS劫持。有些设备或软件总是使用硬编码的DNS服务器，例如Netflix通过Google DNS(8.8.8.8或8.8.4.4)发送请求，您可以使用此选项来劫持查询。
-hijack-dns = 8.8.8.8:53,8.8.4.4:53
+private-ip-answer = false
 
 [Proxy]
 # > 策略组
 
 [Proxy Group]
-🚀 节点选择 = select,♻️ 自动选择,新加坡,香港,台湾,日本,interval=600,timeout=5,select=1,url=http://www.gstatic.com/generate_204
-♻️ 自动选择 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=80,timeout=5,select=0,policy-regex-filter=*
+🚀 节点选择 = select,♻️ 自动选择,新加坡,香港,台湾,日本,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
+♻️ 自动选择 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=.*
 香港 = url-test, policy-regex-filter=🇭🇰|香港|HK|湾仔|港仔|九龙|HongKong, interval=600, tolerance=80, timeout=5, select=0, url=http://www.gstatic.com/generate_204,
 台湾 = url-test, policy-regex-filter=🇨🇳|台湾|TW|台北|新竹|台中|桃园|台南|高雄|花莲, interval=600, tolerance=80, timeout=5, select=0, url=http://www.gstatic.com/generate_204,
 日本 = url-test, policy-regex-filter=🇯🇵|日本|JP|东京|大阪|名古屋|福冈|仙台|京都|川日|泉日|埼玉|沪日|深日, interval=600, tolerance=80, timeout=5, select=0, url=http://www.gstatic.com/generate_204,
