--- a/Clash.yaml
+++ b/Clash.yaml
@@ -77,11 +77,18 @@ dns:
     - 223.5.5.5
     - 223.6.6.6
   nameserver:
+    - https://dns.ipv4dns.com/dns-query
     - https://223.5.5.5/dns-query#h3=true
     - https://223.6.6.6/dns-query#h3=true
 
 # 锚点 - 节点订阅的参数 [每小时更新一次订阅节点，每 6 秒一次健康检查]
 NodeParam: &NodeParam {type: http, interval: 3600, health-check: {enable: true, url: 'http://www.google.com/blank.html', interval: 6}}
+
+proxy-providers: 
+  ladder:
+    url: '订阅地址'
+    <<: *NodeParam
+    path: './proxy_providers/ladder.yaml'
 
 # 锚点 - 节点筛选组
 FilterHK: &FilterHK '^(?=.*((?i)🇭🇰|香港|(\b(HK|Hong)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$'
@@ -105,17 +112,12 @@ RuleProviders: &RuleProviders {type: http, behavior: classical, interval: 3600, 
 
 # 策略组
 proxy-groups: 
-  - {name: AI, type: select, include-all-providers: true, filter: *FilterXJJ}
-  - {name: Telegram, type: select, proxies: [香港策略, 台湾策略, 日本策略, 韩国策略, 新国策略, 美国策略]}
-  - {name: Microsoft, type: select, proxies: [DIRECT, 香港策略, 台湾策略, 日本策略, 韩国策略, 新国策略, 美国策略]}
-  - {name: 兜底策略, type: select, proxies: [香港策略, 台湾策略, 日本策略, 韩国策略, 新国策略, 美国策略, DIRECT]}
-
-  - {name: 香港策略, type: select, proxies: [⏱香港时延优选策略组, 🚥香港故障转移策略组, 🎛香港负载均衡策略组]}
-  - {name: 台湾策略, type: select, proxies: [⏱台湾时延优选策略组, 🚥台湾故障转移策略组, 🎛台湾负载均衡策略组]}
-  - {name: 日本策略, type: select, proxies: [⏱日本时延优选策略组, 🚥日本故障转移策略组, 🎛日本负载均衡策略组]}
-  - {name: 韩国策略, type: select, proxies: [⏱韩国时延优选策略组, 🚥韩国故障转移策略组, 🎛韩国负载均衡策略组]}
-  - {name: 新国策略, type: select, proxies: [⏱新国时延优选策略组, 🚥新国故障转移策略组, 🎛新国负载均衡策略组]}
-  - {name: 美国策略, type: select, proxies: [⏱美国时延优选策略组, 🚥美国故障转移策略组, 🎛美国负载均衡策略组]}
+  - {name: 自动选择, type: url-test, include-all: true, icon = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Auto.png}
+  - {name: 节点选择, type: select, include-all-providers: true, filter: *FilterXJJ,icon = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bypass.png}
+  - {name: OpenAI, type: select, filter: *FilterXJJ, proxies: [⏱新国时延优选策略组], icon = https://raw.githubusercontent.com/Orz-3/mini/master/Color/OpenAI.png}
+  - {name: Telegram, type: select, proxies: [节点选择,⏱新国时延优选策略组, ⏱美国时延优选策略组], icon = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Telegram.png}
+  - {name: Microsoft, type: select, proxies: [DIRECT, 节点选择], icon = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Microsoft.png}
+  - {name: 漏网之鱼, type: select, proxies: [节点选择, DIRECT], icon = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png}
 
 # 时延优选策略组
   - {name: ⏱香港时延优选策略组, <<: *UrlTest, filter: *FilterHK}
@@ -197,13 +199,13 @@ rule-providers:
 rules:
   - RULE-SET, Lan, DIRECT
   - RULE-SET, Direct, DIRECT
-  - RULE-SET, Proxy, 兜底策略
+  - RULE-SET, Proxy, 漏网之鱼
   - RULE-SET, ChinaDownloadCDN, DIRECT
-  - RULE-SET, AI, AI
+  - RULE-SET, AI, OpenAI
   - RULE-SET, iCloudChina, DIRECT
   - RULE-SET, Microsoft, Microsoft
-  - RULE-SET, Google, 兜底策略
+  - RULE-SET, Google, 漏网之鱼
   - RULE-SET, Telegram, Telegram
   - RULE-SET, ESET_China, DIRECT
   - GEOIP, CN, DIRECT
-  - MATCH, 兜底策略
+  - MATCH, 漏网之鱼
