--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -90,7 +90,7 @@ TikTok = select,节点选择,新国时延优选,台湾时延优选,url = http://
 韩国节点 = NameRegex, FilterKey = "^(?=.*(韩国|韓|KR|Korea|🇰🇷))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$"
 新国节点 = NameRegex, FilterKey = "^(?=.*(新加坡|狮城|SG|Singapore|🇸🇬))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$"
 美国节点 = NameRegex, FilterKey = "^(?=.*(美国|US|United States|America|🇺🇸))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点)).*$"
-其他节点 = NameRegex, FilterKey = "^(?!.*(🇭🇰|HK|Hong|香港|🇹🇼|🇨🇳|TW|Taiwan|台湾|🇯🇵|JP|Japan|日本|🇸🇬|SG|Singapore|狮城|🇺🇸|US|United States|America|美国|🇰🇷|KR|Korea|韩国|韓)).*$"
+其他节点 = NameRegex, FilterKey = "^(?!.*(🇭🇰|HK|Hong|香港|🇹🇼|🇨🇳|TW|Taiwan|台湾|🇯🇵|JP|Japan|日本|🇸🇬|SG|Singapore|狮城|新加坡|🇺🇸|US|United States|America|美国|🇰🇷|KR|Korea|韩国|韓)).*$"
 
 # >本地分流规则
 [Rule]
